--- a/sozluk/templates/entry.html
+++ b/sozluk/templates/entry.html
@@ -3,10 +3,12 @@
 
 {%block body%}
 <a href="{{ url_for('topic', name = entry.topic) }}">diger tanimlari da goster</a>
+<div class="margined_div">
 {{render_entry(entry, topic=True)}}
+</div>
 
 
-<div>
+<div class="margined_div">
     <h2>riskli bolge</h2>
     <div>
         <h3>girdiyi yok et</h3>
