--- a/sozluk/static/sozluk.css
+++ b/sozluk/static/sozluk.css
@@ -5,6 +5,16 @@
     margin: 2px;
 }
 
+dl {
+    display: grid;
+    grid-gap: 4px 16px;
+    grid-template-columns: max-content;
+}
+
+dd {
+    margin: 0;
+    grid-column-start: 2;
+}
 .nounder {
     text-decoration: none;
 }
