--- a/sozluk/templates/index.html
+++ b/sozluk/templates/index.html
@@ -12,10 +12,12 @@
     <h2>girdi yolla!</h2>
     <form method="post" action="{{ url_for('add_entry') }}" enctype="multipart/form-data">
         {{ entry_form.csrf_token() }}
-        <p>{{ entry_form.topic.label }}: {{ entry_form.topic() }}</p>
-        <p>{{ entry_form.text.label }}:</p> {{ entry_form.text() }}
-        <p>{{ entry_form.author.label }}: {{ entry_form.author() }}</p>
-        <p>isiginla bizi aydinlat: {{entry_form.submit()}} </p>
+        <dl>
+            {{ render_form_field(entry_form.topic)}}
+            {{ render_form_field(entry_form.text)}}
+            {{ render_form_field(entry_form.author)}}
+            {{ render_form_field(entry_form.submit, value="yolla")}}
+        </dl>
     </form>
 </div>
 <hr>
