--- a/sozluk/templates/layout.html
+++ b/sozluk/templates/layout.html
@@ -21,6 +21,22 @@
 </div>
 {%endmacro%}
 
+{%macro render_form_field(field)%}
+<dt>{{field.label}}:</dt>
+<dd>
+    {{ field(**kwargs) }}
+
+    {%if field.errors%}
+    <ul>
+        {%for e in field.errors%}
+        <li>{{e}}</li>
+        {%endfor%}
+    </ul>
+    {%endif%}
+
+</dd>
+{%endmacro%}
+
 <head>
     <title>{%block title%}{% endblock %}</title>
     <link rel="stylesheet" type="text/css" href="{{url_for('static', filename='sozluk.css')}}">
