--- a/sozluk/templates/layout.html
+++ b/sozluk/templates/layout.html
@@ -6,7 +6,7 @@
     <h3><a href="{{url_for('topic', name=entry.topic)}}">{{entry.topic}}</a></h3>
     {%endif%}
     {%for paragraph in entry.text.render(topic_prefix='/topic/', entry_prefix='/entry/',
-    author_prefix='/author/').split('\r\n') -%}
+    author_prefix='/author/').strip().split('\r\n') -%}
     {%if paragraph != '' -%}
     <p style="margin: 7px">{{ paragraph |safe}}</p>
     {%else -%}
