fix(layout.html): remove not needed `color` attribute

--- a/sozluk/templates/layout.html
+++ b/sozluk/templates/layout.html
@@ -65,7 +65,7 @@
     {%endblock%}
     <hr class="footer_hr">
     <p>
-        <a style="color: black;" href="https://github.com/insanolanbiri/sozluk">{{app_name}} &lt;3 acik
+        <a href="https://github.com/insanolanbiri/sozluk">{{app_name}} &lt;3 acik
             kaynak</a>
     </p>
 </body>
