feat: add stats page

--- a/sozluk/templates/layout.html
+++ b/sozluk/templates/layout.html
@@ -66,7 +66,8 @@
     <hr class="footer_hr">
     <p>
         <a href="https://github.com/insanolanbiri/sozluk">{{app_name}} &lt;3 acik
-            kaynak</a>
+            kaynak</a>&emsp;
+            <a href="{{url_for('stats')}}">istatistikler</a>
     </p>
 </body>
 
