--- a/sozluk/static/sozluk.css
+++ b/sozluk/static/sozluk.css
@@ -5,16 +5,13 @@
     margin: 2px;
 }
 
-dl {
-    display: grid;
-    grid-gap: 4px 16px;
-    grid-template-columns: max-content;
-}
 
 dd {
-    margin: 0;
-    grid-column-start: 2;
+    margin: 10px;
+        margin-top: 7px;
+        margin-bottom: 25px;
 }
+
 .nounder {
     text-decoration: none;
 }
