style(stats.html): use old style `dl` tags

--- a/sozluk/templates/stats.html
+++ b/sozluk/templates/stats.html
@@ -4,7 +4,7 @@
 {%block body%}
 <div class="draw margined_div">
     <h2>istatistikler</h2>
-    <dl>
+    <dl class="grid">
         <dt>toplam entry sayisi</dt>
         <dd>{{total_entry_count}}</dd>
         <dt>toplam yazar sayisi</dt>
