--- a/sozluk/static/sozluk.css
+++ b/sozluk/static/sozluk.css
@@ -12,6 +12,16 @@ dd {
         margin-bottom: 25px;
 }
 
+dl.grid {
+    display: grid;
+    grid-gap: 4px 16px;
+    grid-template-columns: max-content;
+}
+
+dl.grid dd {
+    margin: 0;
+    grid-column-start: 2;
+}
 .nounder {
     text-decoration: none;
 }
