--- a/sozluk/templates/layout.html
+++ b/sozluk/templates/layout.html
@@ -42,7 +42,7 @@
 
 <head>
     <title>{%block title%}{%endblock%}</title>
-    <link rel="icon" type="image/png" href="{{url_for('static', filename='favicon.png')}}
+    <link rel="icon" type="image/png" href="{{url_for('static', filename='favicon.png')}}">
     <link rel="stylesheet" type="text/css" href="{{url_for('static', filename='sozluk.css')}}">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
