--- a/sozluk/static/sozluk.css
+++ b/sozluk/static/sozluk.css
@@ -22,6 +22,9 @@ dl.grid dd {
     margin: 0;
     grid-column-start: 2;
 }
+div.entry {
+    margin-bottom: 40px;
+}
 .nounder {
     text-decoration: none;
 }
