--- a/sozluk/templates/index.html
+++ b/sozluk/templates/index.html
@@ -3,8 +3,14 @@
 
 {%block body%}
 <div class="margined_div">
-    <p>
-        {{app_name}}.
+    <p>{{app_name}}. beklenmedik derecede serbest bir ortam.</p>
+    <p>bu sayfaya gelen herkesin (sen dahil! yasasin!) istedigi konu hakkinda istedigi isim (genclerin tabiri ile
+        "nickname") ile tanimlar yapabilecegi bir yer.</p>
+    <p>asiri derecede ozgurlugun oldukca dogal bir sonucu oldugu icin sen de tahmin etmissindir ki <i>bu sitedeki hicbir
+            sey dogru veya gercek degildir.</i>
+        bu gercekdisiligi kaldiramayacak bunyeye sahip olabilirsin. biz seni bu halinle seviyoruz (burada kalp emojisi
+        var) ancak sozlukteki bilgilerin pek de sana gore olmamasi gibi bir durum soz
+        konusu ise kimsenin seni burada olmaya zorlamadigini bilmeni isterim.</p>
     </p>
 </div>
 
