fix(stats.html): use percentage symbol in cpu usage

--- a/sozluk/templates/stats.html
+++ b/sozluk/templates/stats.html
@@ -18,7 +18,7 @@
         <dd>{{last_entry.time(timezone).strftime("%d.%m.%Y %H.%M")}}</dd>
         {%endif-%}
         <dt>islemci kullanimi</dt>
-        <dd>{{cpu_percentage}}</dd>
+        <dd>%{{cpu_percentage}}</dd>
         <dt>islemci sayisi</dt>
         <dd>{{cpu_count}}</dd>
         <dt>bellek kullanimi</dt>
