style(index.html): make author and topic lists scrollable

--- a/sozluk/static/sozluk.css
+++ b/sozluk/static/sozluk.css
@@ -40,6 +40,10 @@ hr {
     max-width: 1000px;
 }
 
+div.scrollable {
+    overflow-y: scroll;
+    max-height: 400px;
+}
 
 .draw {
     border: #22967f 2px solid;
