--- a/sozluk/templates/index.html
+++ b/sozluk/templates/index.html
@@ -29,7 +29,7 @@
 <hr>
 <div class="draw margined_div">
     <h2>guncel basliklar</h2>
-    <div>
+    <div class="scrollable">
         {%for topic in topics -%}
         <div>
             <a href="{{ url_for('topic', name=topic) }}">{{topic}}</a>
@@ -40,7 +40,7 @@
 <hr>
 <div class="draw margined_div">
     <h2>son yazarlar</h2>
-    <div>
+    <div class="scrollable">
         {%for i in authors -%}
         <div>
             <a href="{{ url_for('author', name=i) }}">{{i}}</a>
