--- a/sozluk/templates/layout.html
+++ b/sozluk/templates/layout.html
@@ -45,6 +45,7 @@
     <link rel="icon" type="image/png" href="{{url_for('static', filename='favicon.png')}}">
     <link rel="stylesheet" type="text/css" href="{{url_for('static', filename='sozluk.css')}}">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="robots" content="noindex">
 </head>
 
 <body>
