feat: add the emoji

--- a/sozluk/templates/layout.html
+++ b/sozluk/templates/layout.html
@@ -69,7 +69,7 @@
     <p>
         <a href="https://github.com/insanolanbiri/sozluk">{{app_name}} &lt;3 acik
             kaynak</a>&emsp;
-            <a href="{{url_for('stats')}}">istatistikler</a>
+            <a href="{{url_for('stats')}}">istatistikler</a>&emsp;<a href="{{url_for('theemoji')}}">:bilgenhocaemojisi:</a>
     </p>
 </body>
 
