--- a/sozluk/templates/layout.html
+++ b/sozluk/templates/layout.html
@@ -67,8 +67,8 @@
     {%endblock%}
     <hr class="footer_hr">
     <p>
-        <a href="https://github.com/insanolanbiri/sozluk">{{app_name}} &lt;3 acik
-            kaynak</a>&emsp;
+        <a href="{{url_for('about')}}">hakkinda</a>&emsp;<a href="https://github.com/insanolanbiri/sozluk">{{app_name}} &lt;3
+            acik kaynak</a>&emsp;
             <a href="{{url_for('stats')}}">istatistikler</a>&emsp;<a href="{{url_for('theemoji')}}">:bilgenhocaemojisi:</a>
     </p>
 </body>
