style(theemoji): prettify the spacings and the size

--- a/sozluk/templates/theemoji.html
+++ b/sozluk/templates/theemoji.html
@@ -3,5 +3,7 @@
 
 {%block body%}
 <h2>:bilgenhocaemojisi:</h2>
-<p>😊</p>
+<div class="margined_div">
+    <p style="font-size: 18em;">😊</p>
+</div>
 {%endblock%}
