--- a/sozluk/templates/topic.html
+++ b/sozluk/templates/topic.html
@@ -20,6 +20,8 @@
         <dl>
             {{ render_form_field(entry_form.text) }}
             {{ render_form_field(entry_form.author) }}
+            <p>girdilerinde kucuk bir cocuk gibi davranma. (ayrica bkz: <a
+                    href="{{url_for('topic', name='sozluk yazarlarından beklenenler' )}}">sozluk yazarlarından beklenenler</a>)</p>
             {{ render_form_field(entry_form.submit, value="yolla") }}
         </dl>
     </form>
