fix(index.html): typo in welcome text

--- a/sozluk/templates/index.html
+++ b/sozluk/templates/index.html
@@ -8,7 +8,7 @@
         "nickname") ile tanimlar yapabilecegi bir yer.</p>
     <p>asiri derecede ozgurlugun oldukca dogal bir sonucu oldugu icin sen de tahmin etmissindir ki <i>bu sitedeki hicbir
             sey dogru veya gercek degildir.</i>
-        bu gercekdisiligi kaldiramayacak bunyeye sahip olabilirsin. biz seni bu halinle seviyoruz (burada kalp emojisi
+        bu gercekdisiligi kaldiramayacak bunyeye sahip olabilirsin. biz seni bu halinle de seviyoruz (burada kalp emojisi
         var) ancak sozlukteki bilgilerin pek de sana gore olmamasi gibi bir durum soz
         konusu ise kimsenin seni burada olmaya zorlamadigini bilmeni isterim.</p>
     </p>
