--- a/sozluk/templates/index.html
+++ b/sozluk/templates/index.html
@@ -31,7 +31,7 @@
 <hr>
 <div class="draw margined_div">
     <h2>guncel basliklar</h2>
-    <div class="scrollable">
+    <div class="scrollable list">
         {%for topic in topics -%}
         <div>
             <a href="{{ url_for('topic', name=topic) }}">{{topic}}</a>
@@ -42,7 +42,7 @@
 <hr>
 <div class="draw margined_div">
     <h2>son yazarlar</h2>
-    <div class="scrollable">
+    <div class="scrollable list">
         {%for i in authors -%}
         <div>
             <a href="{{ url_for('author', name=i) }}">{{i}}</a>
