--- a/sozluk/templates/index.html
+++ b/sozluk/templates/index.html
@@ -30,6 +30,15 @@
 </div>
 <hr>
 <div class="draw margined_div">
+    <h2>el feneri</h2>
+    <form method="get" action="{{url_for('search')}}">
+        <dl>
+            {{render_form_field(search_form.query, placeholder="tek bir anahtar kelime")}}
+        </dl>
+    </form>
+    </div>
+    <hr>
+    <div class="draw margined_div">
     <h2>guncel basliklar</h2>
     <div class="scrollable list">
         {%for topic in topics -%}
