--- a/sozluk/templates/index.html
+++ b/sozluk/templates/index.html
@@ -50,16 +50,7 @@
 </div>
 <hr>
 <div class="draw margined_div">
-    <h2>son yazarlar</h2>
-    <div class="scrollable list">
-        {%for i in authors -%}
-        <div>
-            <a href="{{ url_for('author', name=i) }}">{{i}}</a>
-        </div>
-        {%endfor%}
-    </div>
-</div>
-<div class="draw margined_div">
     <h2><a href="{{url_for('random')}}">rastgele</a></h2>
+    <h2><a href="{{url_for('authors')}}">yazarlar</a></h2>
 </div>
 {%endblock%}
