chore: use `render_kw` argument on form fields

--- a/sozluk/templates/entry.html
+++ b/sozluk/templates/entry.html
@@ -21,7 +21,7 @@
                 {{ render_form_field(risk.text)}}
                 {{ render_form_field(risk.checkbox) }}
                 {{ render_form_field(risk.checkbox_2) }}
-                {{ render_form_field(risk.submit, style="background-color: red", value="yok et") }}
+                {{ render_form_field(risk.submit) }}
             </dl>
         </form>
     </div>
