--- a/sozluk/templates/index.html
+++ b/sozluk/templates/index.html
@@ -22,7 +22,7 @@
             {{ render_form_field(entry_form.topic)}}
             {{ render_form_field(entry_form.text)}}
             {{ render_form_field(entry_form.author)}}
-            {{ render_form_field(entry_form.submit, value="yolla")}}
+            {{ render_form_field(entry_form.submit)}}
             </dl>
             <p>girdilerinde kucuk bir cocuk gibi davranma. (ayrica bkz: <a
                     href="{{url_for('topic', name='sozluk yazarlarından beklenenler' )}}">sozluk yazarlarından beklenenler</a>)</p>
@@ -33,7 +33,7 @@
     <h2>el feneri</h2>
     <form method="get" action="{{url_for('search')}}">
         <dl>
-            {{render_form_field(search_form.query, placeholder="tek bir anahtar kelime")}}
+            {{render_form_field(search_form.query)}}
         </dl>
     </form>
     </div>
