--- a/sozluk/templates/search.html
+++ b/sozluk/templates/search.html
@@ -6,7 +6,7 @@
 <div class="margined_div">
     <form method="get" action="{{url_for('search')}}">
         <dl>
-            {{render_form_field(search_form.query, placeholder="tek bir anahtar kelime")}}
+            {{render_form_field(search_form.query)}}
         </dl>
     </form>
 </div>
