--- a/sozluk/templates/topic.html
+++ b/sozluk/templates/topic.html
@@ -22,7 +22,7 @@
         <dl>
             {{ render_form_field(entry_form.text) }}
             {{ render_form_field(entry_form.author) }}
-            {{ render_form_field(entry_form.submit, value="yolla") }}
+            {{ render_form_field(entry_form.submit) }}
             </dl>
     </form>
 </div>
