fix: empty lines on rendered html documents

--- a/sozluk/templates/404.html
+++ b/sozluk/templates/404.html
@@ -1,9 +1,9 @@
-{%extends 'layout.html'%}
-{%block title%}yok olmus - {{app_name}}{%endblock%}
+{%extends 'layout.html'-%}
+{%block title-%}yok olmus - {{app_name}}{%endblock-%}
 
-{%block body%}
+{%block body-%}
 <h2>yok olmus</h2>
 <p>bir seyler aradin, bir seyler yapmak istedin ama yoklar iste, ne yaparsin?</p>
 <p>dort yuz dort. dunyanin en unlu hata mesaji. hic beklemedigin bir anda karsina pat diye cikan sayi.</p>
 <p>istersen geri don ya da <a href="{{url_for('index')}}">ana sayfaya git.</a></p>
-{%endblock%}
+{%endblock-%}
