--- a/sozluk/templates/stats.html
+++ b/sozluk/templates/stats.html
@@ -1,7 +1,7 @@
-{%extends 'layout.html'%}
-{%block title%}istatistikler - {{app_name}}{%endblock%}
+{%extends 'layout.html'-%}
+{%block title-%}istatistikler - {{app_name}}{%endblock-%}
 
-{%block body%}
+{%block body-%}
 <div class="draw margined_div">
     <h2>istatistikler</h2>
     <dl class="grid">
@@ -31,4 +31,4 @@
         {%endif-%}
     </dl>
 </div>
-{%endblock%}
+{%endblock-%}
