--- a/sozluk/templates/about.html
+++ b/sozluk/templates/about.html
@@ -1,9 +1,9 @@
-{%extends 'layout.html'%}
-{%block title%}hakkinda - {{app_name}}{%endblock%}
+{%extends 'layout.html'-%}
+{%block title-%}hakkinda - {{app_name}}{%endblock-%}
 
-{%block body%}
+{%block body-%}
 <h2>{{app_name}}.</h2>
 <div class="margined_div">
     <p>oyle iste. bir seyler yazacagiz buraya.</p>
 </div>
-{%endblock%}
+{%endblock-%}
