--- a/sozluk/templates/author.html
+++ b/sozluk/templates/author.html
@@ -1,11 +1,11 @@
-{%extends 'layout.html'%}
-{%block title%}@{{author}} - {{app_name}}{%endblock%}
+{%extends 'layout.html'-%}
+{%block title-%}@{{author}} - {{app_name}}{%endblock-%}
 
-{%block body%}
+{%block body-%}
 <h2>@{{author}}</h2>
 <div class="margined_div">
     {%for entry in entries -%}
     {{render_entry(entry, author=False, topic=True)}}
-    {%endfor%}
+    {%endfor-%}
 </div>
-{%endblock%}
+{%endblock-%}
