--- a/sozluk/templates/index.html
+++ b/sozluk/templates/index.html
@@ -37,19 +37,10 @@
         </dl>
     </form>
     </div>
-    <hr>
-    <div class="draw margined_div">
-    <h2>guncel basliklar</h2>
-    <div class="scrollable list">
-        {%for topic in topics -%}
-        <div>
-            <a href="{{ url_for('topic', name=topic) }}">{{topic}}</a>
-        </div>
-        {%endfor-%}
-    </div>
 </div>
 <hr>
 <div class="draw margined_div">
+    <h2><a href="{{url_for('topics')}}">son basliklar</a></h2>
     <h2><a href="{{url_for('random')}}">rastgele</a></h2>
     <h2><a href="{{url_for('authors')}}">yazarlar</a></h2>
 </div>
