style: remove the weird warning from entry forms

--- a/sozluk/templates/index.html
+++ b/sozluk/templates/index.html
@@ -24,8 +24,8 @@
             {{ render_form_field(entry_form.author)}}
             {{ render_form_field(entry_form.submit)}}
             </dl>
-            <p>girdilerinde kucuk bir cocuk gibi davranma. (ayrica bkz: <a
-                    href="{{url_for('topic', name='sozluk yazarlarından beklenenler' )}}">sozluk yazarlarından beklenenler</a>)</p>
+            <p>(ayrica bkz: <a href="{{url_for('topic', name='sozluk yazarlarından beklenenler' )}}">sozluk yazarlarından
+                    beklenenler</a>)</p>
     </form>
 </div>
 <hr>
