feat(topics): pages

--- a/sozluk/templates/index.html
+++ b/sozluk/templates/index.html
@@ -40,7 +40,7 @@
 </div>
 <hr>
 <div class="draw margined_div">
-    <h2><a href="{{url_for('topics')}}">son basliklar</a></h2>
+    <h2><a href="{{url_for('topics')}}">basliklar</a></h2>
     <h2><a href="{{url_for('random')}}">rastgele</a></h2>
     <h2><a href="{{url_for('authors')}}">yazarlar</a></h2>
 </div>
