style(404.html): shrink anchor text

--- a/sozluk/templates/404.html
+++ b/sozluk/templates/404.html
@@ -5,5 +5,5 @@
 <h2>yok olmus</h2>
 <p>bir seyler aradin, bir seyler yapmak istedin ama yoklar iste, ne yaparsin?</p>
 <p>dort yuz dort. dunyanin en unlu hata mesaji. hic beklemedigin bir anda karsina pat diye cikan sayi.</p>
-<p>istersen geri don ya da <a href="{{url_for('index')}}">ana sayfaya git.</a></p>
+<p>istersen geri don ya da <a href="{{url_for('index')}}">ana sayfa</a>ya git.</p>
 {%endblock-%}
