--- a/sozluk/templates/layout.html
+++ b/sozluk/templates/layout.html
@@ -44,6 +44,7 @@
     <title>{%if commit=='development'-%}gelistirme;{%endif-%}{%block title-%}{%endblock-%}</title>
     <link rel="icon" type="image/png" href="{{url_for('static', filename='favicon.png')}}">
     <link rel="stylesheet" type="text/css" href="{{url_for('static', filename='sozluk.css')}}">
+    <link rel="stylesheet" type="text/css" href="{{url_for('static', filename=theme_stylesheet)}}">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="robots" content="noindex">
 </head>
@@ -55,7 +56,7 @@
     {%with messages = get_flashed_messages()-%}
     {%if messages-%}
     <br>
-    <div class="draw margined_div" style="border-color: #dd2059; border-width: 5px;">
+    <div class="draw margined_div error">
         {%for i in messages-%}
         <p>- {{i}}</p>
         {%endfor-%}
@@ -69,8 +70,8 @@
     <hr class="footer_hr">
     <p>
         <a href="{{url_for('about')}}">hakkinda</a>&emsp;<a href="https://github.com/insanolanbiri/sozluk">{{app_name}} &lt;3
-            acik kaynak</a>&emsp;
-            <a href="{{url_for('stats')}}">istatistikler</a>&emsp;<a href="{{url_for('theemoji')}}">:bilgenhocaemojisi:</a>
+            acik kaynak</a>&emsp;<a href="{{url_for('theme')}}">tema</a>&emsp;<a
+                href="{{url_for('stats')}}">istatistikler</a>&emsp;<a href="{{url_for('theemoji')}}">:bilgenhocaemojisi:</a>
     </p>
 </body>
 
