fix(themes): red button is not red
This commit fixes the relevant rules by adding the `!important` keyword

--- a/sozluk/static/black.css
+++ b/sozluk/static/black.css
@@ -30,5 +30,5 @@ input[type="submit"] {
     color: #d0d0d0;
 }
 .red_button {
-    background-color: red;
+    background-color: red !important;
 }
