fix(topic): use `p` tag for the paragraph

--- a/sozluk/templates/topic.html
+++ b/sozluk/templates/topic.html
@@ -5,7 +5,7 @@
 <div class="margined_div">
     <h2>{{topic_name}}</h2>
     {%if not entries-%}
-    kimse bu basliga girdi yollamamis...
+    <p>kimse bu basliga girdi yollamamis...</p>
     {%endif-%}
     {%for entry in entries -%}
     {{render_entry(entry, topic=False)}}
