style(nerd): use monospace font on more elements

--- a/sozluk/static/nerd.css
+++ b/sozluk/static/nerd.css
@@ -36,7 +36,10 @@ input[type="submit"] {
 
 p,
 dt,
-dd {
+dd,
+input[type="text"],
+div.list div a,
+textarea {
     font-family: monospace;
     font-size: 12pt;
 }
